Sync/unify minimizeall & showdesktop applets, add support for keyboard navigation

This turns out to be quite a refactoring, but in the end we get a
flattened component hierarchy, consistent structure and behavior, and
of course the keyboard navigation (Meta+Alt+P).

For feature parity, minimizeall applet now also have a parity action
from its sister-applet.

BUG: 454651