applets/showdesktop/plugin/showdesktop.h
@@ -23,6 +23,7 @@ public:
     void setShowingDesktop(bool showingDesktop);
 
     Q_INVOKABLE void minimizeAll();
+    Q_INVOKABLE void toggleDesktop();
 
 Q_SIGNALS:
     void showingDesktopChanged(bool showingDesktop);
